unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The payment terms for the sales order. If not defined on record creation the default terms defined in the admin settings are used.</description>
    <inlineHelpText>The payment terms for the sales order. If not defined on record creation the default terms defined in the admin settings are used.</inlineHelpText>
    <label>Payment Terms</label>
    <referenceTo>OrderApi__Payment_Terms__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>