unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Posted_Date__c</fullName>
    <description>**System Calculated/Override** The date the Sales Order posted Invoices to the GL.</description>
    <inlineHelpText>**System Calculated/Override** The date the Sales Order posted Invoices to the GL.</inlineHelpText>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>