unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Posting_Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Posting_Entity__c</fullName>
    <description>**System Calculated/Override** The entity the Sales Order posted too. Sales Orders either post through an Invoice(s) or through a single Receipt as a Cash Sale.</description>
    <inlineHelpText>**System Calculated/Override** The entity the Sales Order posted too. Sales Orders either post through an Invoice(s) or through a single Receipt as a Cash Sale.</inlineHelpText>
    <label>Posting Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
                <default>true</default>
                <label>Receipt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>