unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Posting_Status__c</fullName>
    <description>**System Calculated/Conditional/Override** The posting status for the Sales Order represents the posting status of related Invoices or the posting status of the Cash Sale Receipt, depending on the Posting Entity.</description>
    <inlineHelpText>**System Calculated/Conditional/Override** The posting status for the Sales Order represents the posting status of related Invoices or the posting status of the Cash Sale Receipt, depending on the Posting Entity.</inlineHelpText>
    <label>Posting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>