unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Preferred_Email__c</fullName>
    <description>System field used for proforma invoice emails. Auto populated from related contact record&#39;s preferred email</description>
    <inlineHelpText>System field used for proforma invoice emails. Auto populated from related contact record&#39;s preferred email</inlineHelpText>
    <label>SYSTEM</label>
    <type>Email</type>
</CustomField>