unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Processing_Changes__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Processing_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Processing Changes on the Sales Order so payment can be locked down.</description>
    <inlineHelpText>Processing Changes on the Sales Order so payment can be locked down.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>