unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Proforma_Invoice_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Invoice_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** SYSTEM FIELD ** Automatically checked when a proforma invoice email has been sent from this sales order.</description>
    <inlineHelpText>** SYSTEM FIELD ** Automatically checked when a proforma invoice email has been sent from this sales order.</inlineHelpText>
    <label>Proforma Invoice Email Sent</label>
    <type>Checkbox</type>
</CustomField>