unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Proforma_Invoice_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Proforma_Invoice_Email_Sent_Date__c</fullName>
    <description>** SYSTEM FIELD ** Automatically updated to the date time the last proforma invoice email was sent related to this sales order. If no proforma invoice email was sent the value of this field will remain empty.</description>
    <inlineHelpText>** SYSTEM FIELD ** Automatically updated to the date time the last proforma invoice email was sent related to this sales order. If no proforma invoice email was sent the value of this field will remain empty.</inlineHelpText>
    <label>Proforma Invoice Email Sent Date</label>
    <type>Date</type>
</CustomField>