unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Require_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Require_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked,Payment to the sales order requires an active and valid Payment Method on file. Defaults unchecked.</description>
    <inlineHelpText>When checked,Payment to the sales order requires an active and valid Payment Method on file. Defaults unchecked.</inlineHelpText>
    <label>Require Payment Method</label>
    <type>Checkbox</type>
</CustomField>