unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Sales_Order_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Sales Order to the Reporting Sales Order</description>
    <inlineHelpText>Relates the Sales Order to the Reporting Sales Order</inlineHelpText>
    <label>Sales Order (R)</label>
    <referenceTo>OrderApi__Sales_Order_R__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>