unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Sales_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Status__c</fullName>
    <description>Status of the Sales Order</description>
    <formula>IF(ISPICKVAL(OrderApi__Posting_Entity__c,&#39;Invoice&#39;),
            IF(AND((OrderApi__Is_Cancelled__c), NOT(OrderApi__Is_Voided__c)),
            &#39;Cancelled&#39;,
            IF(AND(NOT(OrderApi__Is_Posted__c), NOT(OrderApi__Is_Voided__c)),
            &#39;Draft&#39;,
            IF(AND(OrderApi__Is_Closed__c, OrderApi__Is_Posted__c, NOT(OrderApi__Is_Voided__c),  TODAY() &gt; OrderApi__Due_Date__c, OrderApi__Balance_Due__c &gt; 0),
            &#39;Overdue&#39;,
            IF(AND( OrderApi__Balance_Due__c &gt; 0,OrderApi__Is_Closed__c, OrderApi__Is_Posted__c, NOT(OrderApi__Is_Voided__c)),
            &#39;Unpaid&#39;,
            IF(AND(OrderApi__Balance_Due__c &lt;= 0, NOT(OrderApi__Is_Voided__c),OrderApi__Is_Closed__c,OrderApi__Is_Posted__c),
            &#39;Paid&#39;,
            IF(OrderApi__Is_Voided__c,
            &#39;Voided&#39;,
            /*Default Value for Invoice*/
            &#39;&#39;)))))),
            /* Receipt Changes goes here */
            IF(ISPICKVAL(OrderApi__Posting_Entity__c,&#39;Receipt&#39;),
            IF(AND(NOT(OrderApi__Is_Closed__c), NOT(OrderApi__Is_Posted__c), NOT(OrderApi__Is_Voided__c)),
            &#39;Draft&#39;,
            IF(AND(OrderApi__Is_Closed__c, NOT(OrderApi__Is_Posted__c), NOT(OrderApi__Is_Voided__c),  TODAY() &gt; OrderApi__Due_Date__c, OrderApi__Balance_Due__c &gt; 0),
            &#39;Overdue&#39;,
            IF(AND(OrderApi__Is_Closed__c, NOT(OrderApi__Is_Posted__c), NOT(OrderApi__Is_Voided__c)),
            &#39;Unpaid&#39;,
            IF(AND(OrderApi__Balance_Due__c &lt;= 0, NOT(OrderApi__Is_Voided__c),OrderApi__Is_Closed__c,OrderApi__Is_Posted__c),
            &#39;Paid&#39;,
            IF(OrderApi__Is_Voided__c,
            &#39;Voided&#39;,
            /*Default Value for Receipt*/
            &#39;&#39;))))),
            &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Status</label>
    <type>Text</type>
</CustomField>