unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Schedule_Frequency__c</fullName>
    <description>The frequency to Invoice or auto-charge a customer for the Sales Order. Valid values include &quot;Daily&quot;, &quot;Weekly&quot;, &quot;Semi-Monthly&quot;, &quot;Monthly&quot;, &quot;Semi-Annually&quot;, or &quot;Annually&quot;.</description>
    <inlineHelpText>The frequency to Invoice or auto-charge a customer for the Sales Order. Valid values include &quot;Daily&quot;, &quot;Weekly&quot;, &quot;Semi-Monthly&quot;, &quot;Monthly&quot;, &quot;Semi-Annually&quot;, or &quot;Annually&quot;.</inlineHelpText>
    <label>Schedule Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>