unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Schedule_Status__c</fullName>
    <description>**System Calculated/Conditional/Override** A status/description for Sales Orders that hold a schedule of either Invoices (Installment/Termed Recurring) or E-Payments (Recurring/Standing).</description>
    <inlineHelpText>**System Calculated/Conditional/Override** A status/description for Sales Orders that hold a schedule of either Invoices (Installment/Termed Recurring) or E-Payments (Recurring/Standing).</inlineHelpText>
    <label>Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>