unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Schedule_Type__c</fullName>
    <description>Select &quot;Recurring&quot; to automatically charge a credit card or bank account for the total amount of the Sales Order on a set schedule, select &quot;Installment&quot; to Invoice the customer for a portion of the Sales Order on a set schedule.</description>
    <inlineHelpText>Select &quot;Recurring&quot; to automatically charge a credit card or bank account for the total amount of the Sales Order on a set schedule, select &quot;Installment&quot; to Invoice the customer for a portion of the Sales Order on a set schedule.</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OrderApi__Posting_Entity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Termed Recurring</fullName>
            </value>
            <value>
                <fullName>Evergreen Recurring</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Simple Invoice</fullName>
            </value>
            <value>
                <fullName>Simple Receipt</fullName>
                <default>true</default>
                <label>Simple Receipt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>