unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Country__c</fullName>
    <description>The value of this field will be updated with the Account&#39;s Shipping Country or Contact&#39;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</description>
    <inlineHelpText>The value of this field will be updated with the Account&#39;s Shipping Country or Contact&#39;s Mailing Country, based on &quot;Entity&quot; if not defined on record entry.</inlineHelpText>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>