unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Start_Date__c</fullName>
    <description>The date when the subscription starts. This date indicates when the customer first purchased the subscription and isn&#39;t necessarily the same as the current term start date.</description>
    <inlineHelpText>The date when the subscription starts. This date indicates when the customer first purchased the subscription and isn&#39;t necessarily the same as the current term start date.</inlineHelpText>
    <label>Schedule Start Date</label>
    <type>Date</type>
</CustomField>