unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Status__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Status__c</fullName>
    <description>The status of the Sales Order.</description>
    <inlineHelpText>The status of the Sales Order.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>