unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Subscription_Lines__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Lines__c</fullName>
    <description>** System Calculated ** Counts the number of Sales Order Lines where a Subscription Item is present.</description>
    <inlineHelpText>** System Calculated ** Counts the number of Sales Order Lines where a Subscription Item is present.</inlineHelpText>
    <label>Subscription Lines</label>
    <summaryFilterItems>
        <field>OrderApi__Sales_Order_Line__c.OrderApi__Is_Subscription__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>