unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subtotal__c</fullName>
    <description>**System Calculated** Rollup summary of Sales Order Lines &quot;Subtotal&quot; field.</description>
    <inlineHelpText>**System Calculated** Rollup summary of Sales Order Lines &quot;Subtotal&quot; field.</inlineHelpText>
    <label>Subtotal</label>
    <summarizedField>OrderApi__Sales_Order_Line__c.OrderApi__Subtotal__c</summarizedField>
    <summaryFilterItems>
        <field>OrderApi__Sales_Order_Line__c.OrderApi__Is_Adjustment__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>