unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Suspended_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Suspended_Date__c</fullName>
    <description>**System Calculated/Override** The date the recurring order or contract was suspended.</description>
    <inlineHelpText>**System Calculated/Override** The date the recurring order or contract was suspended.</inlineHelpText>
    <label>Suspended Date</label>
    <type>Date</type>
</CustomField>