unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Suspended_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Suspended_Reason__c</fullName>
    <description>**System Calculated/Conditionally Required** If a Standing/Recurring Sales Order is Suspended, Suspended Reason may be required depending on how your environment was configured.</description>
    <inlineHelpText>**System Calculated/Conditionally Required** If a Standing/Recurring Sales Order is Suspended, Suspended Reason may be required depending on how your environment was configured.</inlineHelpText>
    <label>Suspended Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment Method Declined</fullName>
            </value>
            <value>
                <fullName>Payment Method Expired</fullName>
            </value>
            <value>
                <fullName>Payment Method Invalid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>