unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__System_Refresh__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__System_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to refresh the Sales Order and related Sales Order lines, Invoices, Invoice Lines, and Scheduled Payments as appropriate.</description>
    <inlineHelpText>Check this box to refresh the Sales Order and related Sales Order lines, Invoices, Invoice Lines, and Scheduled Payments as appropriate.</inlineHelpText>
    <label>Refresh</label>
    <type>Checkbox</type>
</CustomField>