unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/OrderApi__Valid_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Valid_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Override** Checked when a charge is attempted and accepted by your payment gateway service.</description>
    <inlineHelpText>**System Calculated/Override** Checked when a charge is attempted and accepted by your payment gateway service.</inlineHelpText>
    <label>Valid Payment Method</label>
    <type>Checkbox</type>
</CustomField>