unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/PO_ID__c.field-meta.xml
<CustomField>
    <fullName>PO_ID__c</fullName>
    <formula>Sponsoring_Licensing_Account__r.Sponsored_Relationship2__r.PO_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO ID</label>
    <type>Text</type>
</CustomField>