unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/SO_Bundle__c.field-meta.xml
<CustomField>
    <fullName>SO_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SO Bundle will become the batch that is reviewed for approval before final disposition.</description>
    <inlineHelpText>Choose the bundle of SOs to associate this SO for approval process</inlineHelpText>
    <label>SO Bundle</label>
    <referenceTo>SO_Bundle__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>