unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/SO_URL__c.field-meta.xml
<CustomField>
    <fullName>SO_URL__c</fullName>
    <formula>&#39;&lt;a href=&quot;https://cha.lightning.force.com/lightning/r/OrderApi__Sales_Order__c/&#39;&amp; Id &amp;&#39;/view&quot; target=&quot;_blank&quot;&gt;Click Here&lt;/a&gt;&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO URL</label>
    <type>Text</type>
</CustomField>