unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Sponsored_Billing_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Billing_Coverage__c</fullName>
    <formula>&#39;Billing Cycle: &#39;&amp;
IF( FON_Billing_Type__c != null ,FON_Billing_Quarter__c, &#39;Net 30&#39;)&amp;
IF(FON_Billing_Quarter__c ==&#39;1Q&#39;,&#39;&lt;br&gt;&#39;&amp; FON_Billing_Type__c&amp;&#39; Billing Basis&#39;&amp;
IF( FON_Billing_Type__c ==&#39;Deposit Based&#39; ,
IF( Has_Prorate__c == true,
&#39; – Prorated Annual Dues covered through &#39;&amp;&#39;12/31/&#39;&amp;
IF( FON_Invoice_Timing__c == &#39;Annual&#39;, TEXT(YEAR(DATEVALUE(NOW()))+1), TEXT(YEAR(DATEVALUE(NOW()))))
,&#39;&#39;)
&amp;&#39;&lt;br&gt;&#39;,&#39;&#39;)&amp;
IF(FON_Invoice_Timing__c == &#39;Annual&#39;,
&#39;Annual Dues Coverage: 01/01/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))&amp;&#39; - 12/31/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW()))),
&#39;Quarterly Dues Coverage: 01/01/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))&amp;&#39; - 03/31/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))
)
, 
IF(FON_Billing_Quarter__c ==&#39;2Q&#39;,&#39;&lt;br&gt;&#39;&amp; FON_Billing_Type__c&amp;&#39; Billing Basis&#39;&amp;
IF( FON_Billing_Type__c ==&#39;Deposit Based&#39; ,
IF( Has_Prorate__c == true,
&#39; – Prorated Annual Dues covered through &#39;&amp;&#39;3/31/&#39;&amp;
IF( FON_Invoice_Timing__c == &#39;Annual&#39;, TEXT(YEAR(DATEVALUE(NOW()))+1), TEXT(YEAR(DATEVALUE(NOW()))))
,&#39;&#39;)
&amp;&#39;&lt;br&gt;&#39;,&#39;&#39;)&amp;
IF(FON_Invoice_Timing__c == &#39;Annual&#39;,
&#39;Annual Dues Coverage: 04/01/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))&amp;&#39; - 03/31/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW()))+1),
&#39;Quarterly Dues Coverage: 04/01/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))&amp;&#39; - 06/30/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))
)
, 
IF(FON_Billing_Quarter__c ==&#39;3Q&#39;,&#39;&lt;br&gt;&#39;&amp; FON_Billing_Type__c&amp;&#39; Billing Basis&#39;&amp;
IF( FON_Billing_Type__c ==&#39;Deposit Based&#39; ,
IF( Has_Prorate__c == true,
&#39; – Prorated Annual Dues covered through &#39;&amp;&#39;6/30/&#39;&amp;
IF( FON_Invoice_Timing__c == &#39;Annual&#39;, TEXT(YEAR(DATEVALUE(NOW()))+1), TEXT(YEAR(DATEVALUE(NOW()))))
,&#39;&#39;)
&amp;&#39;&lt;br&gt;&#39;,&#39;&#39;)&amp;
IF(FON_Invoice_Timing__c == &#39;Annual&#39;,
&#39;Annual Dues Coverage: 07/01/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))&amp;&#39; - 06/30/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW()))+1),
&#39;Quarterly Dues Coverage: 07/01/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))&amp;&#39; - 09/30/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))
)
, 
IF(FON_Billing_Quarter__c ==&#39;4Q&#39;,&#39;&lt;br&gt;&#39;&amp; FON_Billing_Type__c&amp;&#39; Billing Basis&#39;&amp;
IF( FON_Billing_Type__c ==&#39;Deposit Based&#39; ,
IF( Has_Prorate__c == true,
&#39; – Prorated Annual Dues covered through &#39;&amp;&#39;9/30/&#39;&amp;
IF( FON_Invoice_Timing__c == &#39;Annual&#39;, TEXT(YEAR(DATEVALUE(NOW()))+1), TEXT(YEAR(DATEVALUE(NOW()))))
,&#39;&#39;)
&amp;&#39;&lt;br&gt;&#39;,&#39;&#39;)&amp;
IF(FON_Invoice_Timing__c == &#39;Annual&#39;,
&#39;Annual Dues Coverage: 10/01/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))&amp;&#39; - 09/30/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW()))+1),
&#39;Quarterly Dues Coverage: 10/01/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))&amp;&#39; - 12/31/&#39;&amp;TEXT(YEAR(DATEVALUE(NOW())))
)
,
IF(FON_Billing_Quarter__c ==&#39;1QFull&#39;,&#39;&lt;br&gt;&#39;&amp; FON_Billing_Type__c&amp;&#39; Billing Basis – Annual Dues covered through &#39;&amp;
IF( Sub_Quarter__c == &#39;1Q&#39;,
&#39;1/1/&#39;&amp;FON_Invoice_Year__c&amp;&#39; to &#39;&amp;&#39;12/31/&#39;,
IF( Sub_Quarter__c == &#39;2Q&#39;,
&#39;12/1/&#39;&amp;FON_Invoice_Year__c&amp;&#39; to &#39;&amp;&#39;12/31/&#39;,
IF( Sub_Quarter__c == &#39;3Q&#39;,
&#39;3/1/&#39;&amp;FON_Invoice_Year__c&amp;&#39; to &#39;&amp;&#39;12/31/&#39;,
IF( Sub_Quarter__c == &#39;1Q&#39;,
&#39;6/1/&#39;&amp;FON_Invoice_Year__c&amp;&#39; to &#39;&amp;&#39;12/31/&#39;,
&#39;&#39;
)
)
)
)&amp;FON_Invoice_Year__c
,
&#39;&#39;
)
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsored Billing Coverage</label>
    <type>Text</type>
</CustomField>