unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Sponsoring_Licensing_Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Sponsoring_Licensing_Invoice_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsoring/Licensing Invoice Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>