unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Sub_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Sub_Quarter__c</fullName>
    <label>Sub Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>