unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Plan</label>
    <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>