unpackaged/main/default/objects/OrderApi__Sales_Order__c/fields/Total_Count_of_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Count_of_Lines__c</fullName>
    <label>Total Count of Lines</label>
    <summaryForeignKey>OrderApi__Sales_Order_Line__c.OrderApi__Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>