unpackaged/main/default/objects/OrderApi__Sales_Order__c/listViews/Abandoned_Shopping_Carts.listView-meta.xml
<ListView>
    <fullName>Abandoned_Shopping_Carts</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>OrderApi__Entity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderApi__Status__c</columns>
    <columns>OrderApi__Is_Proforma__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Created_by_Customer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OrderApi__Is_Posted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Abandoned Shopping Carts</label>
</ListView>