unpackaged/main/default/objects/OrderApi__Sales_Order__c/listViews/Drafts.listView-meta.xml
<ListView>
    <fullName>Drafts</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>SO_Bundle__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderApi__Sales_Order_Status__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OrderApi__Is_Proforma__c</columns>
    <columns>OrderApi__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Sales_Order_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Drafts</label>
</ListView>