unpackaged/main/default/objects/OrderApi__Sales_Order__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Posting_Entity__c</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>OrderApi__Entity__c</columns>
    <columns>OrderApi__Posted_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderApi__Sales_Order_Status__c</columns>
    <columns>OrderApi__Posting_Status__c</columns>
    <columns>OrderApi__Is_Posted__c</columns>
    <columns>OrderApi__Status__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>FON_Has_Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>