unpackaged/main/default/objects/OrderApi__Sales_Order__c/listViews/Outstanding_CE_Late_Fee_Proforma.listView-meta.xml
<ListView>
    <fullName>Outstanding_CE_Late_Fee_Proforma</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>OrderApi__Date__c</columns>
    <columns>OrderApi__Overall_Total__c</columns>
    <columns>OrderApi__Posting_Status__c</columns>
    <columns>OrderApi__Sales_Order_Status__c</columns>
    <columns>FON_Is_CE_Filing_Order__c</columns>
    <columns>FON_Actual_Sum__c</columns>
    <columns>FON_CE_Late_Filing_Order__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FON_Is_CE_Filing_Order__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OrderApi__Sales_Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>Outstanding CE Late Fee Proforma</label>
</ListView>