unpackaged/main/default/objects/OrderApi__Sales_Order__c/listViews/Posted_Sales_Orders.listView-meta.xml
<ListView>
    <fullName>Posted_Sales_Orders</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>SO_Bundle__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderApi__Posted_Date__c</columns>
    <columns>OrderApi__Sales_Order_Status__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>OrderApi__Paid_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Posting_Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </filters>
    <label>Posted Sales Orders</label>
</ListView>