unpackaged/main/default/objects/OrderApi__Sales_Order__c/listViews/SO_Bundles.listView-meta.xml
<ListView>
    <fullName>SO_Bundles</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Posting_Entity__c</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>OrderApi__Entity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderApi__Sales_Order_Status__c</columns>
    <columns>OrderApi__Posting_Status__c</columns>
    <columns>OrderApi__Is_Posted__c</columns>
    <columns>SO_Bundle__c</columns>
    <columns>OrderApi__Status__c</columns>
    <columns>Invoice_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FON_Has_Event__c</field>
        <operation>equals</operation>
    </filters>
    <label>SO Bundles</label>
</ListView>