unpackaged/main/default/objects/OrderApi__Sales_Order__c/listViews/Unpaid_Sales_Order.listView-meta.xml
<ListView>
    <fullName>Unpaid_Sales_Order</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Posting_Entity__c</columns>
    <columns>OrderApi__Account__c</columns>
    <columns>OrderApi__Contact__c</columns>
    <columns>OrderApi__Entity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderApi__Posted_Date__c</columns>
    <columns>OrderApi__Sales_Order_Status__c</columns>
    <columns>OrderApi__Status__c</columns>
    <columns>OrderApi__Balance_Due__c</columns>
    <columns>OrderApi__Is_Posted__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Balance_Due__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OrderApi__Is_Posted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OrderApi__Sales_Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Voided</value>
    </filters>
    <label>Unpaid Sales Order</label>
</ListView>